--- a/infra/main.yml
+++ b/infra/main.yml
@@ -1,14 +1,33 @@
 AWSTemplateFormatVersion: 2010-09-09
 
 Parameters:
+  # ec2
   EC2InstanceType:
     Type: String
   EC2AMI:
     Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
     Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
+  # CodePipeline
+  CodePipelineBucket:
+    Type: String
+    Description: 'The S3 bucket for CodePipeline artifacts.'
+  # GitHub
+  GitHubOwner:
+    Type: String
+    Description: 'The username of the source GitHub repo.'
+  GitHubRepo:
+    Type: String
+    Description: 'The source GitHub repo name (without the username).'
+  GitHubBranch:
+    Type: String
+    Default: master
+    Description: 'The source GitHub branch.'
+  GitHubPersonalAccessToken:
+    Type: String
+    NoEcho: true
+    Description: 'A GitHub personal access token with "repo" and "admin:repo_hook" permissions.'
 
 Resources:
-
   # ec2 fw
   SecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -110,6 +129,77 @@ Resources:
       Tags:
         - Key: Name
           Value: !Ref AWS::StackName
+
+  # ec2 -> CodeDeploy
+  InstanceRole:
+    Type: "AWS::IAM::Role"
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          Effect: Allow
+          Principal:
+            Service:
+              - "ec2.amazonaws.com"
+          Action: sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/CloudWatchFullAccess
+        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforAWSCodeDeploy 
+      Tags:
+        - Key: Name
+          Value: !Ref AWS::StackName
+  # codebuild/codepipeline -> aws resources
+  DeploymentRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          Effect: Allow
+          Principal:
+            Service:
+              - codepipeline.amazonaws.com
+              - codedeploy.amazonaws.com
+              - codebuild.amazonaws.com
+          Action: sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/PowerUserAccess
+
+  # codebuild
+  BuildProject:
+    Type: AWS::CodeBuild::Project
+    Properties:
+      Name: !Ref AWS::StackName
+      ServiceRole: !GetAtt DeploymentRole.Arn
+      Artifacts:
+        Type: CODEPIPELINE
+      Environment:
+        Type: LINUX_CONTAINER
+        ComputeType: BUILD_GENERAL1_SMALL
+        Image: aws/codebuild/standard:2.0
+      Source:
+        Type: CODEPIPELINE
+  # deploy stack
+  DeploymentApplication:
+    Type: AWS::CodeDeploy::Application
+    Properties:
+      ApplicationName: !Ref AWS::StackName
+      ComputePlatform: Server
+  # deploy to stage
+  StagingDeploymentGroup:
+    Type: AWS::CodeDeploy::DeploymentGroup
+    DependsOn: Instance
+    Properties:
+      DeploymentGroupName: staging
+      ApplicationName: !Ref DeploymentApplication
+      DeploymentConfigName: CodeDeployDefault.AllAtOnce 
+      ServiceRoleArn: !GetAtt DeploymentRole.Arn
+      Ec2TagFilters: 
+        - Key: aws:cloudformation:stack-name
+          Type: KEY_AND_VALUE
+          Value: !Ref AWS::StackName
+
+
 
 Outputs:
   InstanceEndpoint:
