--- a/infra/main.yml
+++ b/infra/main.yml
@@ -60,97 +60,11 @@ Resources:
           Action: sts:AssumeRole
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/CloudWatchFullAccess
+        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforAWSCodeDeploy
       Tags:
         - Key: Name
           Value: !Ref AWS::StackName
 
-  # instance profile iam<->ec2
-  InstanceProfile:
-    Type: "AWS::IAM::InstanceProfile"
-    Properties:
-      Roles:
-        - Ref: InstanceRole
-
-  # ec2 instance
-  Instance:
-    Type: AWS::EC2::Instance
-    CreationPolicy: 
-      ResourceSignal:
-        Timeout: PT5M
-        Count: 1
-    Metadata:
-      AWS::CloudFormation::Init:
-        config:
-          packages: 
-            yum:
-              wget: []
-              unzip: []
-          files:
-            /home/ec2-user/install: 
-              source: !Sub "https://aws-codedeploy-${AWS::Region}.s3.amazonaws.com/latest/install"
-              mode: "000755" # executable
-          commands:
-            00-install-cd-agent: 
-              command: "./install auto"
-              cwd: "/home/ec2-user/"
-    Properties:
-      ImageId: !Ref EC2AMI
-      InstanceType: !Ref EC2InstanceType
-      IamInstanceProfile: !Ref InstanceProfile
-      Monitoring: true
-      SecurityGroupIds:
-        - !GetAtt SecurityGroup.GroupId 
-      UserData:
-        Fn::Base64: !Sub |
-          #!/bin/bash -xe
-
-          exec > /tmp/userdata.log 2>&1
-          sudo yum -y update
-          sudo yum install -y aws-cfn-bootstrap
-
-          cat > /tmp/install_script.sh << EOF
-            echo "Setting up NodeJS Environment"
-            curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash
-
-            . /home/ec2-user/.nvm/nvm.sh
-            . /home/ec2-user/.bashrc
-
-            nvm alias default v12.7.0
-            nvm install v12.7.0
-            nvm use v12.7.0
-
-            mkdir -p /home/ec2-user/app/logs
-          EOF
-
-          chown ec2-user:ec2-user /tmp/install_script.sh && chmod a+x /tmp/install_script.sh
-          sleep 1; su - ec2-user -c "/tmp/install_script.sh"
-
-          # Have CloudFormation install any files and packages from the metadata
-          /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --region ${AWS::Region} --resource Instance
-          # Signal to CloudFormation that the instance is ready
-          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --region ${AWS::Region} --resource Instance
-      Tags:
-        - Key: Name
-          Value: !Ref AWS::StackName
-
-  # ec2 -> CodeDeploy
-  InstanceRole:
-    Type: "AWS::IAM::Role"
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          Effect: Allow
-          Principal:
-            Service:
-              - "ec2.amazonaws.com"
-          Action: sts:AssumeRole
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/CloudWatchFullAccess
-        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforAWSCodeDeploy 
-      Tags:
-        - Key: Name
-          Value: !Ref AWS::StackName
   # codebuild/codepipeline -> aws resources
   DeploymentRole:
     Type: AWS::IAM::Role
@@ -182,12 +96,14 @@ Resources:
         Image: aws/codebuild/standard:2.0
       Source:
         Type: CODEPIPELINE
+
   # deploy stack
   DeploymentApplication:
     Type: AWS::CodeDeploy::Application
     Properties:
       ApplicationName: !Ref AWS::StackName
       ComputePlatform: Server
+
   # deploy to stage
   StagingDeploymentGroup:
     Type: AWS::CodeDeploy::DeploymentGroup
@@ -259,7 +175,7 @@ Resources:
                 DeploymentGroupName: !Ref StagingDeploymentGroup
               RunOrder: 1
 
-  # cd webhook
+  # CD webhook
   PipelineWebhook:
     Type: AWS::CodePipeline::Webhook
     Properties:
@@ -274,6 +190,83 @@ Resources:
       Name: !Sub 'webhook-${AWS::StackName}'
       TargetPipelineVersion: !GetAtt Pipeline.Version
       RegisterWithThirdParty: true
+
+  # instance profile iam<->ec2
+  InstanceProfile:
+    Type: "AWS::IAM::InstanceProfile"
+    Properties:
+      Roles:
+        - Ref: InstanceRole
+
+  # ec2 instance
+  Instance:
+    Type: AWS::EC2::Instance
+    CreationPolicy: 
+      ResourceSignal:
+        Timeout: PT15M
+        Count: 1
+    Metadata:
+      AWS::CloudFormation::Init:
+        config:
+          packages: 
+            yum:
+              ruby: []
+              wget: []
+              unzip: []
+          files:
+            /home/ec2-user/install: 
+              source: !Sub "https://aws-codedeploy-${AWS::Region}.s3.amazonaws.com/latest/install"
+              mode: "000755" # executable
+          commands:
+            00-install-cd-agent: 
+              command: "./install auto"
+              cwd: "/home/ec2-user/"
+    Properties:
+      ImageId: !Ref EC2AMI
+      InstanceType: !Ref EC2InstanceType
+      IamInstanceProfile: !Ref InstanceProfile
+      Monitoring: true
+      SecurityGroupIds:
+        - !GetAtt SecurityGroup.GroupId 
+      UserData:
+        Fn::Base64: !Sub |
+          #!/bin/bash -xe
+
+          exec > /tmp/userdata.log 2>&1
+          yum -y update
+          yum install -y aws-cfn-bootstrap
+
+          cat > /tmp/install_script.sh << EOF
+            # Setting up NodeJS Environment
+            curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash
+
+
+            # Init nvm
+            . /home/ec2-user/.nvm/nvm.sh
+            . /home/ec2-user/.bashrc
+
+            # Load nvm
+            nvm alias default v12.7.0
+            nvm install v12.7.0
+            nvm use v12.7.0
+
+            # Set up log dir
+            mkdir -p /home/ec2-user/app/logs
+          EOF
+
+          # filerights for install script
+          chown ec2-user:ec2-user /tmp/install_script.sh && chmod a+x /tmp/install_script.sh
+          
+          # run install script
+          sleep 1; su - ec2-user -c "/tmp/install_script.sh"
+
+          # cfn install meta packages
+          /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --region ${AWS::Region} --resource Instance
+          # cfn signal ready
+          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --region ${AWS::Region} --resource Instance
+      Tags:
+        - Key: Name
+          Value: !Ref AWS::StackName
 
 Outputs:
   InstanceEndpoint:
