--- a/infra/main.yml
+++ b/infra/main.yml
@@ -61,6 +61,14 @@ Resources:
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/CloudWatchFullAccess
         - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforAWSCodeDeploy
+      Policies:
+        - PolicyName: ec2DescribeTags 
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Action: 'ec2:DescribeTags'
+                Resource: '*'
       Tags:
         - Key: Name
           Value: !Ref AWS::StackName
@@ -199,79 +207,108 @@ Resources:
       Roles:
         - Ref: InstanceRole
 
-  # ec2 instance
-  Instance:
-    Type: AWS::EC2::Instance
-    CreationPolicy: 
-      ResourceSignal:
-        Timeout: PT15M
-        Count: 1
+  # ec2 template
+  InstanceLaunchTemplate:
+    Type: AWS::EC2::LaunchTemplate
     Metadata:
       AWS::CloudFormation::Init:
         config:
-          packages: 
+          packages:
             yum:
               ruby: []
-              #wget: []
-              #unzip: []
+              jq: []
           files:
-            /home/ec2-user/install: 
+            /home/ec2-user/install:
               source: !Sub "https://aws-codedeploy-${AWS::Region}.s3.amazonaws.com/latest/install"
               mode: "000755" # executable
           commands:
-            00-install-cd-agent: 
+            00-install-cd-agent:
               command: "./install auto"
               cwd: "/home/ec2-user/"
     Properties:
-      ImageId: !Ref EC2AMI
-      InstanceType: !Ref EC2InstanceType
-      IamInstanceProfile: !Ref InstanceProfile
-      Monitoring: true
-      SecurityGroupIds:
-        - !GetAtt SecurityGroup.GroupId 
-      UserData:
-        Fn::Base64: !Sub |
-          #!/bin/bash -xe
+      LaunchTemplateName: !Sub 'LaunchTemplate_${AWS::StackName}'
+      LaunchTemplateData:
+        ImageId: !Ref EC2AMI
+        InstanceType: !Ref EC2InstanceType
+        IamInstanceProfile:
+          Arn: !GetAtt InstanceProfile.Arn
+        Monitoring:
+          Enabled: true
+        SecurityGroupIds:
+          - !GetAtt SecurityGroup.GroupId
+        UserData:
+          Fn::Base64: !Sub |
+            #!/bin/bash -xe
 
-          exec > /tmp/userdata.log 2>&1
-          yum -y update
-          yum install -y aws-cfn-bootstrap
+            exec > /tmp/userdata.log 2>&1
+            yum -y update
+            yum install -y aws-cfn-bootstrap
 
-          cat > /tmp/install_script.sh << EOF
-            # Setting up NodeJS Environment
-            curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash
+            cat > /tmp/install_script.sh << EOF
+              echo "Setting up NodeJS Environment"
+              curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash
 
+              . /home/ec2-user/.nvm/nvm.sh
+              . /home/ec2-user/.bashrc
 
-            # Init nvm
-            . /home/ec2-user/.nvm/nvm.sh
-            . /home/ec2-user/.bashrc
+              nvm alias default v12.7.0
+              nvm install v12.7.0
+              nvm use v12.7.0
 
-            # Load nvm
-            nvm alias default v12.7.0
-            nvm install v12.7.0
-            nvm use v12.7.0
+              mkdir -p /home/ec2-user/app/logs
+            EOF
 
-            # Set up log dir
-            mkdir -p /home/ec2-user/app/logs
-          EOF
+            chown ec2-user:ec2-user /tmp/install_script.sh && chmod a+x /tmp/install_script.sh
+            sleep 1; su - ec2-user -c "/tmp/install_script.sh"
 
-          # filerights for install script
-          chown ec2-user:ec2-user /tmp/install_script.sh && chmod a+x /tmp/install_script.sh
-          
-          # run install script
-          sleep 1; su - ec2-user -c "/tmp/install_script.sh"
+            /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --region ${AWS::Region} --resource InstanceLaunchTemplate
 
-          # cfn install meta packages
-          /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --region ${AWS::Region} --resource Instance
-          # cfn signal ready
-          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --region ${AWS::Region} --resource Instance
+            export INSTANCE_ID="`wget -q -O - http://169.254.169.254/latest/meta-data/instance-id`"
+            export LOGICAL_ID=`aws --region ${AWS::Region} ec2 describe-tags \ 
+              --filters "Name=resource-id,Values=${!INSTANCE_ID}" \
+                        "Name=key,Values=aws:cloudformation:logical-id" \
+              | jq -r ".Tags[0].Value"`
+
+            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --region ${AWS::Region} --resource ${!LOGICAL_ID}
+
+  # ec2 instance
+  Instance1:
+    Type: AWS::EC2::Instance
+    CreationPolicy:
+      ResourceSignal:
+        Timeout: PT5M
+        Count: 1
+    Properties:
+      LaunchTemplate:
+        LaunchTemplateId: !Ref InstanceLaunchTemplate
+        Version: !GetAtt InstanceLaunchTemplate.LatestVersionNumber 
+      Tags:
+        - Key: Name
+          Value: !Ref AWS::StackName
+
+  Instance2:
+    Type: AWS::EC2::Instance
+    CreationPolicy:
+      ResourceSignal:
+        Timeout: PT5M
+        Count: 1
+    Properties:
+      LaunchTemplate:
+        LaunchTemplateId: !Ref InstanceLaunchTemplate
+        Version: !GetAtt InstanceLaunchTemplate.LatestVersionNumber
       Tags:
         - Key: Name
           Value: !Ref AWS::StackName
 
 Outputs:
-  InstanceEndpoint:
+  InstanceEndpoint1:
     Description: The DNS name for the created instance
-    Value: !Sub "http://${Instance.PublicDnsName}:8080" 
+    Value: !Sub "http://${Instance1.PublicDnsName}:8080"
     Export:
-      Name: InstanceEndpoint
+      Name: InstanceEndpoint1
+
+  InstanceEndpoint2:
+    Description: The DNS name for the created instance
+    Value: !Sub "http://${Instance2.PublicDnsName}:8080"
+    Export:
+      Name: InstanceEndpoint2
