--- a/infra/main.yml
+++ b/infra/main.yml
@@ -78,7 +78,6 @@ Resources:
         - Key: Name
           Value: !Ref AWS::StackName
 
-  # codebuild/codepipeline -> aws resources
   DeploymentRole:
     Type: AWS::IAM::Role
     Properties:
@@ -95,7 +94,6 @@ Resources:
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/PowerUserAccess
 
-  # codebuild
   BuildProject:
     Type: AWS::CodeBuild::Project
     Properties:
@@ -111,21 +109,20 @@ Resources:
         Type: CODEPIPELINE
         BuildSpec: infra/buildspec.yml
 
-  # deploy stack
   DeploymentApplication:
     Type: AWS::CodeDeploy::Application
     Properties:
       ApplicationName: !Ref AWS::StackName
       ComputePlatform: Server
 
-  # deploy to stage
   StagingDeploymentGroup:
     Type: AWS::CodeDeploy::DeploymentGroup
-    DependsOn: Instance
     Properties:
       DeploymentGroupName: staging
+      AutoScalingGroups:
+        - !Ref ScalingGroup 
       ApplicationName: !Ref DeploymentApplication
-      DeploymentConfigName: CodeDeployDefault.AllAtOnce 
+      DeploymentConfigName: CodeDeployDefault.AllAtOnce
       ServiceRoleArn: !GetAtt DeploymentRole.Arn
       Ec2TagFilters: 
         - Key: aws:cloudformation:stack-name
@@ -424,6 +421,50 @@ Resources:
       Tags:
         - Key: Name
           Value: !Ref AWS::StackName
+
+  ScalingGroup:
+    Type: AWS::AutoScaling::AutoScalingGroup
+    UpdatePolicy: 
+      AutoScalingRollingUpdate: 
+        MinInstancesInService: "1"
+        MaxBatchSize: "1"
+        PauseTime: "PT15M"
+        WaitOnResourceSignals: "true" 
+        SuspendProcesses:
+          - HealthCheck
+          - ReplaceUnhealthy
+          - AZRebalance
+          - AlarmNotification
+          - ScheduledActions
+    Properties:
+      AutoScalingGroupName: !Sub 'ASG_${AWS::StackName}'
+      AvailabilityZones:
+        - !Select [ 0, !GetAZs '' ]
+        - !Select [ 1, !GetAZs '' ]
+      MinSize: 2 
+      MaxSize: 6 
+      HealthCheckGracePeriod: 0
+      HealthCheckType: ELB 
+      LaunchTemplate: 
+        LaunchTemplateId: !Ref InstanceLaunchTemplate
+        Version: !GetAtt InstanceLaunchTemplate.LatestVersionNumber
+      TargetGroupARNs:
+        - !Ref LoadBalancerTargetGroup 
+      MetricsCollection:
+        -
+          Granularity: "1Minute"
+          Metrics:
+            - "GroupMaxSize"
+            - "GroupInServiceInstances"
+      VPCZoneIdentifier:
+        - !Ref SubnetAZ1
+        - !Ref SubnetAZ2
+      Tags:
+        - Key: Name
+          Value: !Ref AWS::StackName
+          PropagateAtLaunch: "true"
+
+
 
 Outputs:
   LBEndpoint:
